--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
@@ -33,16 +34,17 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.544.0",
+    "cmdk": "^1.1.1",
+    "lucide-react": "0.545.0",
     "media-chrome": "^4.14.0",
-    "motion": "^12.23.22",
+    "motion": "^12.23.24",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-fast-marquee": "^1.6.5",
-    "react-hook-form": "^7.64.0",
-    "recharts": "2.15.4",
+    "react-hook-form": "^7.65.0",
+    "recharts": "3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tunnel-rat": "^0.1.2",
@@ -54,7 +56,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@faker-js/faker": "^10.0.0",
     "@tailwindcss/postcss": "^4.1.14",
-    "@types/node": "^20.19.20",
+    "@types/node": "24.7.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "eslint": "^9.37.0",
