--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
-    "lucide-react": "0.545.0",
+    "lucide-react": "0.546.0",
     "media-chrome": "^4.14.0",
     "motion": "^12.23.24",
-    "next": "15.5.4",
+    "next": "16.0.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
@@ -59,7 +59,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.65.0",
     "react-resizable-panels": "^3.0.6",
-    "recharts": "2.15.4",
+    "recharts": "3.3.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tunnel-rat": "^0.1.2",
@@ -70,15 +70,18 @@
     "@biomejs/biome": "2.2.5",
     "@eslint/eslintrc": "^3.3.1",
     "@faker-js/faker": "^10.1.0",
-    "@tailwindcss/postcss": "^4.1.14",
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "24.7.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "eslint": "^9.37.0",
-    "eslint-config-next": "15.5.4",
-    "shadcn": "^3.4.2",
-    "tailwindcss": "^4.1.14",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "16.0.0",
+    "shadcn": "^3.5.0",
+    "tailwindcss": "^4.1.16",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "react-is": "^19.1.0"
   }
 }
