updated dashboard, gitignore, and employee kanban
- formatted dashboard page and added text for what to include on the
  sample data for the employee kanban board
- removed MoreHorizontal button on employee kanban as it was unused
- added rust /target folder and *.sql files onto gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# rust for some reason
+/target
+
+# do not include SQL files (for now)
+*.sql
